--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Dataset and model files
 *.png
 *.npz
+*tile/readme.txt
+*tile/license.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
